--- a/src/sponsors.css
+++ b/src/sponsors.css
@@ -1,30 +1,35 @@
-.sponsors {
-    font-family: "Nexa Light";
+.titles {
     text-align: center;
-    margin: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-figure {
-    width: 40%;
-}
-figcaption {
-    text-align: left;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: black;
-    border-style: solid;
-    border-color: #d3d3d3;
+    font-family: "Nexa Light";
 }
 
-.logo {
-    background-color: #d3d3d3;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    height: 200px;
-    margin:auto;
-    position: relative;
+.logo_img {
+    width: 90%;
 }
+
+
+.figure {
+    margin:auto;
+}
+
+.caption {
+    text-align: left;
+    color: black;
+    font-family: "Nexa Light";
+    border-style: solid;
+    border-color: #d3d3d3;
+    padding: 2%;
+}
+
+.sponsors {
+    display: grid;
+    grid-template-columns:15% 85%;
+    grid-gap: 10px;
+    background-color: white;
+    padding: 20px;
+}
+
+
+
+
 
