--- a/src/home.css
+++ b/src/home.css
@@ -1,8 +1,8 @@
 .divBlack, .divPurple {
-    width: 100vw;
+    /* width: 100vw; */
     position: relative;
-    margin-left: -50vw;
-    left: 50%;
+    /* margin-left: -50vw;
+    left: 50%; */
     font-family: "Nexa Light";
     min-height:600px;
     padding-bottom: 20px;
@@ -12,6 +12,28 @@
     background-color:black;
 }
 
+
 .divPurple {
     background-color:#350B4D;
+}
+
+
+.team-pic {
+    width: 200px;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+  }
+.grid-item {
+    padding: 20px;
+    text-align: center;
+}
+
+.text {
+    color: white;
 }
