--- a/src/home.css
+++ b/src/home.css
@@ -25,12 +25,13 @@
     padding: 10px;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding: 10px;
+.grid-container-home {
+    display: grid;  
+    grid-gap: 5px;  
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(2, 300px);
   }
-.grid-item {
+.grid-item-home {
     padding: 20px;
     text-align: center;
 }
