--- a/src/gallery.css
+++ b/src/gallery.css
@@ -4,18 +4,12 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: repeat(2, 300px);
   }
-/* .grid-item-gallery {
-    padding: 20px;
-    text-align: center;
-    width:200px;
-    height:200px;
-    overflow:hidden;
-} */
+
 .grid-item-gallery { 
     object-fit: cover;
     width:250px;
     height:250px;
-    padding: 10px;
+    padding-bottom: 10px;
     text-align:center;
   }
   
@@ -24,3 +18,10 @@
     width: 250px;
     height: 250px;
   }
+
+.gallery-caption {
+    text-align: left;
+    font-family: "Nexa Light";
+    /* margin-top: -50px;
+    color: white; */
+}
