--- a/src/home.css
+++ b/src/home.css
@@ -1,21 +1,27 @@
-.divBlack, .divPurple {
+div.container {
+    max-width: none;
+    padding: 0 0 0 0;
+}
+
+.divBlack,
+.divPurple {
     width: 100%;
     position: relative;
     /* margin-left: -50vw;
     left: 50%; */
     font-family: "Nexa Light";
-    min-height:600px;
+    min-height: 600px;
     padding-bottom: 20px;
     /* box-sizing: border-box; */
 }
 
 .divBlack {
-    background-color:black;
+    background-color: black;
 }
 
 
 .divPurple {
-    background-color:#350B4D;
+    background-color: #350B4D;
 }
 
 
@@ -26,11 +32,12 @@
 }
 
 .grid-container-home {
-    display: grid;  
-    grid-gap: 5px;  
+    display: grid;
+    grid-gap: 5px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: repeat(2, 300px);
-  }
+}
+
 .grid-item-home {
     padding: 20px;
     text-align: center;
