--- a/src/font.css
+++ b/src/font.css
@@ -1,10 +1,9 @@
 @font-face {
     font-family: Nexa Bold;
-    src: url(./Nexa/Nexa/Nexa_V2_2020/WEB/NexaTextDemo-Bold.woff);
+    src: url("./font/nexa-bold-webfont.woff");
 }
+
 @font-face {
     font-family: Nexa Light;
-    src: url(./Nexa/Nexa/Nexa_V2_2020/WEB/NexaTextDemo-Light.woff);
+    src: url("./font/nexa-light-webfont.woff");
 }
-
-
