--- a/src/home.css
+++ b/src/home.css
@@ -1,7 +1,7 @@
-div.container {
+/* div.container {
     max-width: none;
     padding: 0 0 0 0;
-}
+} */
 
 .divBlack,
 .divPurple {
@@ -11,6 +11,7 @@ div.container {
     left: 50%; */
     font-family: "Nexa Light";
     min-height: 600px;
+    /* height: 90vh; */
     padding-bottom: 20px;
     /* box-sizing: border-box; */
 }
