--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -30,6 +30,7 @@ div.container {
   grid-gap: 5px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: repeat(2, 300px);
+  padding: 20px 10% 20px 10%;
 }
 
 .grid-item-home {
