Slideshow css updated (height needs fixing)

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -8,12 +8,15 @@ div.container {
   width: 100%;
   position: relative;
   min-height: 50vh;
+  max-height: 115vh;
   padding-bottom: 20px;
 }
 
 .section-black {
   background-color: black;
 }
+
+
 
 .section-purple {
   background-color: #350b4d;
@@ -42,9 +45,21 @@ div.container {
   color: white;
 }
 
+
 .slideshow-container{
-  margin: auto;
-  /* padding: 100px;
-  width: 80%;
-  text-align: center; */
+  background-size: cover;
+  text-align: center;
+  width: 100%;
+  /* min-width: 100%; */
+  /* height: 50%; */
+  margin-bottom: auto;
+  position: relative;
+}
+
+
+.carousel-caption{
+     background-color: black;
+     opacity: 0.7;
+     top: 50px;
+     bottom: auto;
 }
