--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -8,7 +8,6 @@ div.container {
   width: 100%;
   position: relative;
   min-height: 50vh;
-  max-height: 115vh;
   padding-bottom: 20px;
 }
 
@@ -17,15 +16,16 @@ div.container {
 }
 
 
-
 .section-purple {
   background-color: #350b4d;
+  text-align: justify;
 }
+
 
 .team-pic {
   width: 200px;
   border-radius: 50%;
-  padding: 10px;
+  padding: 8px;
 }
 
 .grid-container-home {
@@ -50,9 +50,6 @@ div.container {
   background-size: cover;
   text-align: center;
   width: 100%;
-  /* min-width: 100%; */
-  /* height: 50%; */
-  margin-bottom: auto;
   position: relative;
 }
 
