--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -4,6 +4,13 @@
     border-bottom: solid;
     border-bottom-color: white;
     width: 100%;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+}
+
+.email-input:focus {
+    outline: none;
 }
 
 .contact-text {
