Finish adding captcha

--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -43,7 +43,7 @@
   right: 10%;
 }
 
-.grecaptcha-badge {
-  display: none !important;
-  z-index: -1;
+.g-recaptcha {
+  margin: auto;
+  padding-top: 1rem;
 }
