Refactor and updates of navbar Update social icons on navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,10 +2,14 @@
   color: white;
 }
 
-.social-icon {
-  padding: 0 0.5rem 0 0;
-}
-
 html {
   scroll-behavior: smooth;
+}
+
+.social-navbar {
+  flex-direction: row;
+}
+
+.social-logo {
+  color: white;
 }
