--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -32,41 +32,16 @@
 }
 
 .btn-contact-container {
-  width: 300px;
   margin: auto;
   padding: 30px;
 }
 
-
 .stamp-img {
   position: absolute;
-  top: 15%;
+  top: 10vh;
   right: 10%;
-  
-}
-
-/* @media (min-width: 430px) {
-  .btn-contact-container {
-    width: 300px;
-  }
-} */
-
-/* laptop size and down*/
-@media (max-width: 1024px) {
-  .stamp-img {
-    right: 3%;
-  }
-}
-
-/* large mobile and down */
-@media (max-width: 430px) {
-  .stamp-img {
-    visibility: hidden;
-  }
-
-  .btn-contact-container {
-    margin-left: -30%;
-  }
+  width: 10vw;
+  height: 20vh;
 }
 
 .g-recaptcha {
